# synde-langgraph

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  test_ec_celery.py
scripts/: run_mock.py  test_connection.py
staticfiles/synde_web/css/: chat.css  main.css
staticfiles/synde_web/css/themes/: light.css
staticfiles/synde_web/js/: sidebar.js  sse.js  theme.js
synde_checkpointer/: __init__.py  memory.py  sqlite.py
synde_cli/: __init__.py  display.py  main.py
synde_gpu/: __init__.py  locking.py  manager.py  mocks.py  tasks.py
synde_graph/: __init__.py  config.py  graph.py
synde_graph/nodes/: __init__.py  generation.py  input.py  intent.py  prediction.py  response.py
synde_graph/routing/: __init__.py  routes.py
synde_graph/state/: __init__.py  factory.py  schema.py
synde_graph/subgraphs/: __init__.py  generation.py  prediction.py
synde_graph/utils/: __init__.py  live_logger.py  smiles_fetcher.py
synde_web/: __init__.py  apps.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
synde_web/migrations/: 0001_initial.py
synde_web/models/: __init__.py  conversation.py  message.py  project.py  user.py  workflow.py
synde_web/static/synde_web/css/: chat.css  sidebar.css
synde_web/static/synde_web/css/themes/: dark.css
synde_web/static/synde_web/js/: app.js  chat.js  sse.js  viewer.js
synde_web/templates/synde_web/: base.html  index.html
synde_web/templates/synde_web/auth/: login.html  profile.html  signup.html
synde_web/templates/synde_web/components/: message.html  suggestions.html  viewer_modal.html
synde_web/views/: __init__.py  api.py  auth.py  main.py  sse.py  upload.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  gpu_responses.py  states.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_nodes.py  test_routing.py  test_state.py
